--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
    <title>Project</title>
 </head>
 <body>
+   <main class="main">
+      <h1>Hello</h1>
+   </main>
+   
+
    <script></script>
-   <h1>Hello</h1>
 </body>
 </html>
