--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
    
    <h1>Hello</h1>
    <div>Каталог</div>
-
-   <a href="#">Push me</a>
+   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad et voluptate suscipit eligendi laudantium ex iste facere fuga! Tenetur ipsum expedita repellat, cumque porro at in atque rerum doloremque cupiditate.</p>
 </body>
 </html>
