--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    
-   <h1>Hello</h1>
+   <h1>Hello World!</h1>
    <div>Каталог</div>
    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad et voluptate suscipit eligendi laudantium ex iste facere fuga! Tenetur ipsum expedita repellat, cumque porro at in atque rerum doloremque cupiditate.</p>
 </body>
